[gd_scene load_steps=13 format=3 uid="uid://8s4icav3lfbd"]

[ext_resource type="Script" path="res://level_design_objects/Button.gd" id="1_yqta4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_slk0i"]
albedo_color = Color(0.176471, 0.239216, 0.45098, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1l4hn"]
material = SubResource("StandardMaterial3D_slk0i")
size = Vector3(1, 0.1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7udn0"]
albedo_color = Color(0.784314, 0.0784313, 0.0784313, 1)
emission = Color(0.627451, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_j5eeq"]
material = SubResource("StandardMaterial3D_7udn0")
height = 0.0
radial_segments = 8

[sub_resource type="CylinderShape3D" id="CylinderShape3D_js7wv"]
height = 0.2

[sub_resource type="Animation" id="Animation_86w71"]
resource_name = "Pressed Down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.136475, 0), Vector3(0, 0.010619, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.2, -0.25, 0, 0.25, 0, 0.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_xpm3c"]
resource_name = "Pressed Up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.010619, 0), Vector3(0, 0.136475, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_ge7ve"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.010619, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vkulr"]
_data = {
"Pressed Down": SubResource("Animation_86w71"),
"Pressed Up": SubResource("Animation_xpm3c"),
"RESET": SubResource("Animation_ge7ve")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_wdtmy"]
size = Vector3(1, 0.1, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cq7wl"]
height = 0.2

[node name="Button" type="StaticBody3D"]
script = ExtResource("1_yqta4")

[node name="Base" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1l4hn")

[node name="Button" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.010619, 0)
mesh = SubResource("CylinderMesh_j5eeq")

[node name="ButCol" type="StaticBody3D" parent="Button"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button/ButCol"]
shape = SubResource("CylinderShape3D_js7wv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vkulr")
}

[node name="BaseHitbox" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_wdtmy")

[node name="ButtonHitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.16133, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ButtonHitbox"]
shape = SubResource("CylinderShape3D_cq7wl")

[connection signal="body_entered" from="ButtonHitbox" to="." method="_on_button_hitbox_body_entered"]
[connection signal="body_exited" from="ButtonHitbox" to="." method="_on_button_hitbox_body_exited"]
